# SandboxSX2

./: README.md  ROADMAP.md  index.html  settings.gradle.kts
.agent/workflows/: build.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ps2_core.cpp  ps2_core.h  ps2_jni.cpp
app/src/main/cpp/core/: cpu_common.h  debug_bus.cpp  debug_bus.h  dma_stub.cpp  dma_stub.h  ee_cpu.cpp  ee_cpu.h  ee_decode.cpp  ee_decode.h  gs_stub.cpp  gs_stub.h  iop_cpu.cpp  iop_cpu.h  mem_map.cpp  mem_map.h  ps2_core.cpp  ps2_core.h  scheduler.cpp  scheduler.h  sif_stub.cpp  sif_stub.h  timers.cpp  timers.h
app/src/main/java/com/maxrblx1/sandboxsx2/: MainActivity.kt  NativeEmulator.kt
app/src/main/java/com/maxrblx1/sandboxsx2/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
